--- a/src/Components/OurProducts/Product.module.css
+++ b/src/Components/OurProducts/Product.module.css
@@ -18,7 +18,7 @@
   width: 30%;
   min-width: 250px;
   padding: 10px 12px;
-  border: 1px solid #cce7d0;
+  border: 1px solid var(--color-brand--1);
   border-radius: 25px;
   cursor: pointer;
   box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
