--- a/src/Components/PageFooter.module.css
+++ b/src/Components/PageFooter.module.css
@@ -1,6 +1,6 @@
 footer {
   background-color: var(--color-dark--0);
-  padding: 25px 50px;
+  padding: 70px 50px 50px;
 }
 .footer {
   display: flex;
