--- a/src/Components/PageNav.module.css
+++ b/src/Components/PageNav.module.css
@@ -48,6 +48,9 @@ a.ctaLink:visited {
   display: none;
 }
 @media (max-width: 768px) {
+  .nav {
+    padding: 10px 20px;
+  }
   .menuToggle {
     display: block;
     font-size: 3rem;
