--- a/src/Components/OurProducts/Features.module.css
+++ b/src/Components/OurProducts/Features.module.css
@@ -3,10 +3,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  gap: 2rem;
 }
 
 .featuresItem {
-  max-width: 30%;
+  width: 30%;
   background-color: #f2f2f2;
   padding: 20px;
   border-radius: 10px;
@@ -36,4 +37,9 @@
 .featureText p {
   font-size: 1.5rem;
   text-align: left;
+}
+@media only screen and (max-width: 500px) {
+  .featuresItem {
+    width: 100%;
+  }
 }
