--- a/src/Components/Services/Services.module.css
+++ b/src/Components/Services/Services.module.css
@@ -31,3 +31,9 @@
 .service h2:hover {
   color: var(--color-brand--1);
 }
+@media only screen and (max-width: 500px) {
+  .servicesSection {
+    width: 100%;
+    padding: 70px 20px;
+  }
+}
