--- a/src/Components/Skills/Skills.module.css
+++ b/src/Components/Skills/Skills.module.css
@@ -39,3 +39,17 @@
 .skill p {
   font-size: 1.6rem;
 }
+@media (max-width: 768px) {
+  .skill {
+    width: 300px;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .skillsSection {
+    padding: 70px 20px;
+  }
+
+  .skill {
+    width: 350px;
+  }
+}
