--- a/src/Components/ThirdParty.module.css
+++ b/src/Components/ThirdParty.module.css
@@ -27,3 +27,9 @@
   border-radius: 6px;
   gap: 2rem;
 }
+@media only screen and (max-width: 500px) {
+  .thirdParty {
+    width: 100%;
+    padding: 70px 20px;
+  }
+}
