--- a/src/Components/AboutCompany.module.css
+++ b/src/Components/AboutCompany.module.css
@@ -35,3 +35,9 @@
 .textDiv .text {
   font-size: 1.7rem;
 }
+@media only screen and (max-width: 500px) {
+  .aboutCompany {
+    display: flex;
+    padding: 50px 20px;
+  }
+}
