--- a/src/Components/AboutCompany.module.css
+++ b/src/Components/AboutCompany.module.css
@@ -30,6 +30,7 @@
 
 .textDiv h1 {
   font-size: 4rem;
+  text-align: left;
 }
 
 .textDiv .text {
@@ -37,7 +38,6 @@
 }
 @media only screen and (max-width: 500px) {
   .aboutCompany {
-    display: flex;
     padding: 50px 20px;
   }
 }
