--- a/src/Components/Slider/Carousel.module.css
+++ b/src/Components/Slider/Carousel.module.css
@@ -1,6 +1,7 @@
 .imgHeight {
-  height: 110vh;
+  height: 100vh;
   object-fit: cover;
+  background: rgba(0, 0, 0, 0.4);
 }
 .heroHeading {
   position: absolute;
