Chemical Composition Page Added

--- a/src/Components/Slider/Carousel.module.css
+++ b/src/Components/Slider/Carousel.module.css
@@ -4,7 +4,8 @@
 }
 .imgHeight {
   width: 100%;
-  object-fit: cover;
+  /* object-fit: cover; */
+  background-size: cover;
 }
 .heroHeading {
   position: absolute;
