--- a/src/Pages/Technical/Technical.module.css
+++ b/src/Pages/Technical/Technical.module.css
@@ -11,12 +11,16 @@
   text-align: center;
   font-size: 1.7rem;
 }
-@media only screen and (max-width: 500px) {
+@media (max-width: 768px) {
   .technicalContent {
-    padding: 70px 20px;
     flex-direction: column;
   }
   .tableDiv {
     width: 100%;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .technicalContent {
+    padding: 70px 20px;
   }
 }
