--- a/src/Pages/Product/Product.module.css
+++ b/src/Pages/Product/Product.module.css
@@ -43,7 +43,7 @@
 }
 @media (max-width: 768px) {
   .productSection {
-    flex-direction: column;
+    flex-direction: column-reverse;
   }
   .productContent {
     width: 100%;
