Optimize the website

--- a/src/Components/PageNav.module.css
+++ b/src/Components/PageNav.module.css
@@ -34,7 +34,7 @@
 .nav a:link,
 .nav a:visited {
   text-decoration: none;
-  color: var(--color-dark--0);
+  color: #000;
   text-transform: uppercase;
   font-size: 1.5rem;
   font-weight: 600;
@@ -54,49 +54,37 @@
 .nav a:hover {
   color: var(--color-brand--1);
 }
-a.ctaLink:link,
-a.ctaLink:visited {
-  background-color: var(--color-brand--2);
-  color: var(--color-dark--0);
-  padding: 0.8rem 2rem;
-  border-radius: 7px;
+
+.dropDown {
+  float: left;
+  overflow: hidden;
 }
-.dropdown {
-  position: relative;
+.dropDown .dropBtn {
+  border: none;
+  outline: none;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 600;
+  background-color: inherit;
 }
 .dropdownContent {
   display: none;
   position: absolute;
-  background-color: var(--color-light--1);
+  background-color: #f9f9f9;
   min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start !important;
-  align-items: flex-start !important;
-  padding: 0;
-  gap: 0 !important;
 }
-.dropdown:hover .dropdownContent {
-  display: block;
-}
-.dropDown span {
-  color: var(--color-dark--0);
-  text-transform: uppercase;
-  font-size: 1.5rem;
-  font-weight: 600;
-  cursor: pointer;
-}
-.dropDown span:hover {
-  color: var(--color-brand--1);
-}
-.dropdownContent li {
-  padding: 10px 20px;
-  width: 100%;
+.dropdownContent a {
+  padding: 10px 15px;
 }
 
-.dropdownContent li:hover {
-  background-color: #ddd;
+.dropDown:hover {
+  color: var(--color-brand--1);
+}
+.dropDown:hover .dropdownContent {
+  display: flex;
+  flex-direction: column;
 }
 .close,
 .menuToggle {
@@ -106,6 +94,7 @@ a.ctaLink:visited {
   .nav {
     padding: 10px 20px;
   }
+
   .menuToggle {
     display: block;
     font-size: 3rem;
@@ -127,6 +116,10 @@ a.ctaLink:visited {
     transition: 0.3s;
     z-index: 999;
   }
+  .nav ul {
+    gap: 1.5rem;
+  }
+
   .nav .close {
     display: inline-block;
     position: absolute;
@@ -138,11 +131,26 @@ a.ctaLink:visited {
     background-color: transparent;
     border: none;
   }
+
   .menu.open {
     right: 0px;
   }
-  .dropdownContent {
+  .dropDown {
+    float: none;
+  }
+
+  .dropBtn {
+    display: block;
     width: 100%;
-    z-index: inherit;
+    text-align: left;
+  }
+  .dropdownContent {
+    position: relative;
+    box-shadow: none;
+    background-color: inherit;
+  }
+  .dropdownContent a {
+    padding: 0;
+    margin-top: 15px;
   }
 }
