--- a/src/Components/Slider/Carousel.module.css
+++ b/src/Components/Slider/Carousel.module.css
@@ -3,6 +3,7 @@
   background-size: cover;
   background-position: center;
   height: 100vh;
+  object-fit: cover;
 }
 .heroHeading {
   position: absolute;
