--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
 
 /* These CSS variables are global, so they are available in all CSS modules */
 :root {
-  --color-brand--1: #476eb1;
+  --color: 230;
+  --color-brand--1: hsl(var(--color), 69%, 61%);
+  /* --color-brand--1: #476eb1; */
   --color-brand--2: #285880;
   --color-dark--0: #242a2e;
   --color-dark--1: #2d3439;
