--- a/src/Components/AboutCompany.module.css
+++ b/src/Components/AboutCompany.module.css
@@ -7,18 +7,18 @@
 }
 
 .imgDiv {
+  width: 40%;
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
 .imgDiv img {
   width: 100%;
-  max-width: 500px;
   height: auto;
 }
 
 .textDiv {
-  max-width: 600px;
+  width: 55%;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
