--- a/src/Components/Skills/Skills.module.css
+++ b/src/Components/Skills/Skills.module.css
@@ -20,7 +20,7 @@
 }
 
 .skill {
-  width: 350px;
+  width: 30%;
   padding: 50px 40px;
   border-radius: 6px;
   box-shadow: 10px 20px 30px rgba(0, 0, 0, 0.1);
