--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,17 @@ body {
   padding: 1rem 3rem;
   border-radius: 5px;
 }
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 0.6rem;
+  background-color: var(--color-brand--2);
+  border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-brand--1);
+  border-radius: 0.5rem;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--text-color-light);
+}
