--- a/src/Components/Cursor.module.css
+++ b/src/Components/Cursor.module.css
@@ -24,3 +24,10 @@
   pointer-events: none;
   transition: width 0.3s, height 0.3s, opacity 0.3s;
 }
+
+@media screen and (max-width: 768px) {
+  .cursor,
+  .cursor2 {
+    display: none;
+  }
+}
