--- a/src/Components/HowWeAre.module.css
+++ b/src/Components/HowWeAre.module.css
@@ -32,11 +32,13 @@
 .item p {
   font-size: 1.5rem;
 }
+@media (max-width: 768px) {
+  .item {
+    width: 100%;
+  }
+}
 @media only screen and (max-width: 500px) {
   .who {
     padding: 50px 20px;
-  }
-  .item {
-    width: 100%;
   }
 }
