--- a/src/Pages/Product/Flanges.module.css
+++ b/src/Pages/Product/Flanges.module.css
@@ -24,13 +24,16 @@
 .flangeContent p {
   font-size: 1.7rem;
 }
-
-@media only screen and (max-width: 500px) {
+@media (max-width: 768px) {
   .flangesSection {
     flex-direction: column;
-    padding: 70px 20px;
   }
   .flangeContent {
     width: 100%;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .flangesSection {
+    padding: 70px 20px;
   }
 }
