--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   --color: 230;
   --color-brand--1: hsl(var(--color), 69%, 61%);
   /* --color-brand--1: #476eb1; */
+  /* --color-brand--1: green; */
   --color-brand--2: #285880;
   --color-dark--0: #242a2e;
   --color-dark--1: #2d3439;
