--- a/src/Pages/Product/Flanges.module.css
+++ b/src/Pages/Product/Flanges.module.css
@@ -10,11 +10,10 @@
 }
 .flangeImg {
   width: 100%;
-  height: 250px;
-  overflow: hidden;
 }
 .flangeImg img {
   width: 100%;
+  background-size: cover;
 }
 .flangeContent h1 {
   font-size: 3.5rem;
